syntax = "proto3";
package eganow.api.common;

option go_package = "github.com/eganow/core/api;pb";

enum CountryFilter {
  COUNTRY_FILTER_UNSPECIFIED = 0;
  COUNTRY_FILTER_SIGNUP = 1; // signup countries
  COUNTRY_FILTER_OPERATING = 2; // operating countries
}

message GetCountriesRequest {
  CountryFilter filter = 1;
}

message Country {
  string country_code = 1;
  string country_name = 2;
  string currency_iso = 3;
  string country_flag_url = 4;
  int32 min_mobile_number_length = 5;
  int32 max_mobile_number_length = 6;
  string dial_code = 7;
}

message GetCountriesResponse {
  repeated Country countries = 1;
}


