syntax = "proto3";
package eganow.api.merchant;

option go_package = "github.com/eganow/core/api;pb";

// MerchantAccount is the entity that represents
// a merchant/business customer account in the database.
message MerchantAccount {
  string CustomerGuid = 1;
  string CustomerId = 2;
  string MobileNumber = 3;
  string EmailAddress = 4;
  string PersonalBusinessGroup = 5;
  int32 PersonalBusinessGroupValue = 6;
  string FirstName = 7;
  string LastName = 8;
  string BusinessName = 9;
  string LanguageId = 10;
  string CustomerPINHash = 11;
  string UserJwtToken = 12;
  string CountryCode = 13;
  int32 CountryDialCode = 14;
  bool IsSuccess = 15;
  string Message = 16;
  string PasswordExistValue = 17;
  string RegisterModeMobileWebUssd = 18;
  string IdCardStatus = 19;
  string OperatingCountryYesNo = 20;
  string CustomerProfilePicImageUrl = 21;
  int32 MobileNumberOrEmailExist = 22;
  int32 JwtNoOfMinutes = 23;
  int32 ApiVersionNo = 24;
  string AppversionNo = 25;
  string AppUpdateRequirementStatus = 26;
  string CustomerStatus = 27;
}

enum CompanyRegistrationType {
  COMPANY_REGISTRATION_TYPE_UNKNOWN = 0;
  COMPANY_REGISTRATION_TYPE_BUSINESS = 1;
  COMPANY_REGISTRATION_TYPE_PERSONAL = 2;
}

enum DirectorPosition {
  DIRECTOR_POSITION_UNKNOWN = 0;
  DIRECTOR_POSITION_DIRECTOR = 1;
  DIRECTOR_POSITION_SHAREHOLDER = 2;
  DIRECTOR_POSITION_CEO = 3;
  DIRECTOR_POSITION_MANAGEMENT = 4;
  DIRECTOR_POSITION_ENGINEERING = 5;
  DIRECTOR_POSITION_MERCHANT_OWN_CARD_MID = 6;
  DIRECTOR_POSITION_PRIMARY_CONTACT = 7;
  DIRECTOR_POSITION_SECONDARY_CONTACT = 8;
  DIRECTOR_POSITION_ACCOUNT_SIGNATORY = 9;
}

enum CustomerIDTypes {
  CUSTOMER_ID_TYPES_UNKNOWN = 0;
  CUSTOMER_ID_TYPES_PASSPORT = 1;
  CUSTOMER_ID_TYPES_DRIVERS_LICENSE = 2;
  CUSTOMER_ID_TYPES_NATIOANL_ID = 3;
  CUSTOMER_ID_TYPES_BANKID = 4;
}